Modified delivery webservice to create delivery route
