# core/delivery/app.py
@@ -101,6 +101,29 @@ def status_route(request):
 # CORE DELIVERY SERVICE ROUTES
 ########################################################################################################################
 
+@app.route("/route",
+           methods=['POST'])
+def post_route(request):
+    """
+    Create a new route
+    :return:
+    """
+    # Build message
+    message, request_id = make_kafka_message(
+        action='ROUTE_CREATED',
+        message={
+            'route_uuid': str(uuid.uuid4()),
+            'time': str(datetime.datetime.now().replace(microsecond=0).isoformat())
+        }
+    )
+
+    # Send
+    threads_mq['route'].put(message)
+
+    # Response with callback url
+    return json.dumps(dict(message),)
+
+
 @app.route("/delivery",
            methods=['POST'])
 def post_delivery_route(request):
